Fix instagram embed overflow issue
Code was under media query (max-width: 991px) by accident

--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,11 @@ section.tertiary {
     padding: 65px 45px;
 }
 
+section.tertiary .grid-3-col-equal {
+    grid-template-columns: repeat(auto-fit, minmax(348px, 1fr));
+    gap: 5px;
+}
+
 section.tertiary .instagram-container {
     display: flex;
     justify-content: center;
@@ -310,11 +315,6 @@ footer a {
 
     section.secondary .card-footer {
         margin: 20px 130px;
-    }
-
-    section.tertiary .grid-3-col-equal {
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-        gap: 5px;
     }
 
     footer {
